@@ -40,9 +40,13 @@
 * KGySoft.Drawing.Shapes namespace
 ==================================
 - BitmapDataExtensions class:
+  - [Begin]DrawArc[Async] methods:
+    - Fixing rendering when the arc's width or height is near to zero.
   - [Begin]DrawPath[Async] methods:
     - If a Path contained a complex figure with an arc connected to other path segments, then the possible
       connecting other segments might have swapped the arc's start and end points causing an incorrect drawing.
+    - AddArc methods: the startAngle parameter is respected even when a full ellipse is drawn. Matters if the arc is
+      connected with other path segments.
 + Making Figure, PathSegment, LineSegment, BezierSegment and ArcSegment classes public.
 + Path class:
   + New Figures property
